bk_ida/gccida/c1/dwarf_stack_op_name
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf_stack_op_name/src/dwarf2out.c:2757:7: error: expected expression
v1 =  struct op - 3; 
      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf_stack_op_name/src/dwarf2out.c:2761:8: error: use of undeclared identifier 'off_629850'
return off_629850[v1]; 
       ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf_stack_op_name/src/obj/dwarf2out.o] Error 1
